# VisualPet

./: .clangd  .gitignore  CMakeLists.txt  assets.cmake  build-release.bat  build.bat
src/: CatSprite.cpp  CatSprite.h  FrogSprite.cpp  FrogSprite.h  PigSprite.cpp  PigSprite.h  main.cpp
src/Engine/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheet.cpp  SpriteSheet.h  Texture2D.cpp  Texture2D.h  Window.cpp  Window.h
src/Engine/GameLayer/: Scene.cpp  Scene.h  SpriteGameObject.cpp  SpriteGameObject.h
src/Engine/Utils/: Random.cpp  Random.h
